--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -18,8 +18,9 @@ jobs:
       with:
         go-version: '^1.15'
     - name: Fetch latest data
+      env:
+        GITHUB_TOKEN: ${{ .secrets.PERSONAL_ACCESS_TOKEN }}
       run: |-
-        export GITHUB_TOKEN=${{ .secrets.PERSONAL_ACCESS_TOKEN }}
         go run main.go hashicorp/terraform
         go run main.go terraform-providers/terraform-provider-aws
     - name: Commit and push if it changed
